first working  version, moving to dev from here

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,8 +8,13 @@
 </head>
 
 <body>
-   <h1>Lingo</h1>
-   <button id="wordButton" class="float-left submit-button" >Words </button>
+  <h1>Select wordlist you want to play</h1>
+<div id="wordlist">
+		<select id="wordlists"></select>
+		<button id="selectWordList">Play list</button>
+</div>
+
+
 
   
 </body>
