--- a/src/main/webapp/game.html
+++ b/src/main/webapp/game.html
@@ -1,13 +1,28 @@
+<!DOCTYPE html>
+<html>
+<head></head>
+<body>
 <h1>GAME</h1>
 
 
 <h1 id = "title">You are playing</h1>
 
 
+<div id="game">
+<div id="count"></div>
+<div id="word"></div>
+<button id="submitGuess">Guess</button>
+</div>
+<div id="highscores">
+<h1>Scores</h1>
+<div id="scores">
+</div>
+</div>
 
 
+</body>
 
-
-
-
+<link rel="stylesheet" type="text/css" href="css/game.css">
 <script src="js/game.js"></script>
+
+</html>
