create server sided lingo

--- a/src/main/webapp/game.html
+++ b/src/main/webapp/game.html
@@ -13,6 +13,8 @@
 <div id="word"></div>
 <button id="submitGuess">Guess</button>
 </div>
+<br><br>
+<button id="newGame">New game</button>
 <div id="highscores">
 <h1>Scores</h1>
 <div id="scores">
