--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,18 +8,19 @@
 </head>
 
 <body>
-  <h1>Select wordlist you want to play</h1>
-<div id="wordlist">
-		<select id="wordlists"></select>
-		<button id="selectWordList">Play list</button>
-</div>
+<form id="loginForm">
+            <p>username</p>
+            <input id="username" type="text" name="username" class="username">
+            <p>Password</p>
+            <input id="password" type="password" name="password">
+        </form>
+        <p id="warning"></p>
+        <button id="loginBtn" name="login" type=submit>Login</button>
+            <h2>No Account?</h2>
+        <button id="register" name="register" type=button>Register here!</button>
 
 
 
-  
-</body>
-
-<link rel="stylesheet" type="text/css" href="css/index.css">
 <script src="js/index.js"></script>
 
 </html>
